--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
     <div class="container d-flex justify-content-between align-items-center space">
         <div class="space">
-            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <nav class="navbar navbar-expand-lg bg-body-tertiary classpadding">
                 <div class="container-fluid">
                   <a class="navbar-brand text-logo logo " href="#"><img class="img-logo" src="Images/0b1f5e5169434d1cb4e37fbfeb23fd8f.png" alt=""></a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -102,6 +102,47 @@
     </div>
    
  </header>
+
+<main class="main">
+
+    <div class="container">
+        <div id="carouselExampleIndicators" class="carousel slide">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">  
+                   <a href="#"><img src="Images/onepiece.webp" class="d-block w-100 " alt="One Piece"></a>
+              </div>
+              <div class="carousel-item">
+                <a href="#"><img src="Images/jujutsu kaisen.webp" class="d-block w-100 img-slider" alt="Jujutsu Kaisen"></a>
+              </div>
+              <div class="carousel-item">
+                <a href="#"><img src="Images/Mashle.webp" class="d-block w-100 img-slider" alt="Mashle"></a>
+              </div>
+              <div class="carousel-item">
+                <a href="#"><img src="Images/hell's paradise.webp" class="d-block w-100 img-slider" alt="Hell's Paradise"></a>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+    </div>
+    
+
+
+
+</main>
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>  
