[+] Se agrego slider desde cero con algunos estilos

--- a/index.html
+++ b/index.html
@@ -105,6 +105,41 @@
 
 <main class="main">
 
+  <div class="container">
+    <div id="carouselExampleIndicators" class="carousel slide">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+        </div>
+        <div class="carousel-inner principal">
+          <div class="carousel-item active">  
+               <a href="#"><img src="Images/onepiece.webp" class="d-block w-100 " alt="One Piece"></a>
+          </div>
+          <div class="carousel-item">
+            <a href="#"><img src="Images/jujutsu kaisen.webp" class="d-block w-100 img-slider" alt="Jujutsu Kaisen"></a>
+          </div>
+          <div class="carousel-item">
+            <a href="#"><img src="Images/Mashle.webp" class="d-block w-100 img-slider" alt="Mashle"></a>
+          </div>
+          <div class="carousel-item">
+            <a href="#"><img src="Images/hell's paradise.webp" class="d-block w-100 img-slider" alt="Hell's Paradise"></a>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+
+        
+</div>
+
 
 </main>
 
