[+] se agrega otra imagen

--- a/index.html
+++ b/index.html
@@ -203,7 +203,11 @@
       </div>
  
      </div>
-   
+    
+      <a href="#"><img src="Images/ranking of kings.png" alt="ranking-of-kings" class="ranking-of-kings"></a>
+     
+      <h2  class="seccion-1">Ultimos Actualizados: </h2>
+  
 
 
   </div>
