--- a/index.html
+++ b/index.html
@@ -108,6 +108,79 @@
 
 </main>
 
+<footer class="footer">
+  <div class="container content-pre-footer">
+      <div class="row">
+          <div class="col">
+              <h5>Contacta con nosotros</h5>
+              <ul class="menu-social">
+                  <li><a href="#" class="text-decoration-none">
+                      <i class="bi bi-facebook"></i>
+                      <a href="#" class="text-decoration-none">Facebook</a>
+                  </a></li>
+                  <li><a href="#" class="text-decoration-none">
+                      <i class="bi bi-twitter"></i>
+                      <a href="#" class="text-decoration-none">Twitter</a>
+                  </a></li>
+                  <li><a href="#" class="text-decoration-none">
+                      <i class="bi bi-youtube"></i>
+                      <a href="#" class="text-decoration-none">Youtube</a>
+                  </a></li>
+                  <li><a href="#" class="text-decoration-none">
+                      <i class="bi bi-instagram"></i>
+                      <a href="#" class="text-decoration-none">Instagram</a>
+                  </a>
+                  </li>
+                  <li><a href="#" class="text-decoration-none">
+                      <i class="bi bi-tiktok"></i>
+                      <a href="#" class="text-decoration-none">Tiktok</a>
+                  </a>
+                  </li>
+              </ul>
+          </div>
+          <div class="col">
+              <h5 class="title-widget">Navegacion</h5>
+              <ul class="menu-widget">
+                  <li><a href="#" class="text-decoration-none">Explorar lo mas popular</a></li>
+                  <li><a href="#" class="text-decoration-none">Explorar los simulcasts</a></li>
+                  <li><a href="#" class="text-decoration-none">Explorar mangas</a></li>
+                  <li><a href="#" class="text-decoration-none">Calendarios de lanzamientos</a></li>
+                  <li><a href="#" class="text-decoration-none">Noticios</a></li>
+                  <li><a href="#" class="text-decoration-none">Juegos</a></li>
+              </ul>
+          </div>
+          <div class="col">
+              <h5 class="title-widget">Nombre de la Pagina</h5>
+              <ul class="menu-widget">
+                  <li><a href="#" class="text-decoration-none">Comiensa tu Puebra Gratuita</a></li>
+                  <li><a href="#" class="text-decoration-none">Acerca</a></li>
+                  <li><a href="#" class="text-decoration-none">Ayuda/FAQ</a></li>
+                  <li><a href="#" class="text-decoration-none">Terminos de uso</a></li>
+                  <li><a href="#" class="text-decoration-none">Politica de Privacidad</a></li>
+                  <li><a href="#" class="text-decoration-none">Herramintas de aceptacion de cookies</a></li>
+                  <li><a href="#" class="text-decoration-none">Contacto de prensa</a></li>
+                  <li><a href="#" class="text-decoration-none">Hazte con nuestras aplicasiones</a></li>
+                  <li><a href="#" class="text-decoration-none">Canjear tarjeta de regalo</a></li>
+                  <li><a href="#" class="text-decoration-none">Empleo</a></li>
+              </ul>
+          </div>
+          <div class="col">
+              <h5 class="title-widget">Cuenta</h5>
+              <ul class="menu-widget">
+                  <li><a href="#" class="text-decoration-none">Crear cuenta</a></li>
+                  <li><a href="#" class="text-decoration-none">Acceder</a></li>
+              </ul>
+          </div>
+      </div>
+           <div class="container">
+              <div class="copyright">
+               <p> Copyright ©  </p>
+              </div>
+      </div>
+  </div>
+</footer>
+
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>  
