[+] se agregaron detalles

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
  
      </div>
     
-      <a href="#"><img src="Images/ranking of kings.png" alt="ranking-of-kings" class="ranking-of-kings"></a>
+      <a href="#"><img src="Images/ranking of kings.png" alt="ranking-of-kings" class="img-largas"></a>
      
       <h2  class="seccion-1">Algunos de tus personajes favoritos:  </h2>
       <div class="img-con-animacion gap-5">
@@ -290,7 +290,7 @@
 
     </div>
 
-    <a href="#"><img src="Images/My love story.png" alt="My love" class="ranking-of-kings"></a>
+    <a href="#"><img src="Images/My love story.png" alt="My love" class="img-largas"></a>
 
 
 
