[+] se agrego seccion lo mas popular

--- a/index.html
+++ b/index.html
@@ -292,6 +292,61 @@
 
     <a href="#"><img src="Images/My love story.png" alt="My love" class="img-largas"></a>
 
+    <h2 class="seccion-1">Lo mas popular:  </h2>
+     <div class="gratis gap-3 ">
+          <div class="Card">
+          <img src="Images/chainsaw-man-vol-1-9781974709939_hr.jpg" alt="Chainsaw-man" class="Card-img">
+          <div class="Card-body">
+            <h1 class="Card-title seccion-1">Chainsaw-man</h1>
+            <p class="Card-info seccion-1"></p>
+            <button class="Card-btn">Leer</button>
+          </div>
+        </div>
+      
+          <div class="Card">
+        <img src="Images/blue lock.jpe" alt="blue lock" class="Card-img">
+        <div class="Card-body">
+          <h1 class="Card-title seccion-1">Blue Lock</h1>
+          <p class="Card-info seccion-1"></p>
+          <button class="Card-btn">Leer</button>
+        </div>
+      </div>
+
+      <div class="Card">
+        <img src="Images/monster.webp" alt="Monster" class="Card-img">
+        <div class="Card-body">
+          <h1 class="Card-title seccion-1">Monster</h1>
+          <p class="Card-info seccion-1"></p>
+          <button class="Card-btn">Leer</button>
+        </div>
+      </div>
+      <div class="Card">
+        <img src="Images/nana.jpg" alt="Nana" class="Card-img">
+        <div class="Card-body">
+          <h1 class="Card-title seccion-1">Nana</h1>
+          <p class="Card-info seccion-1"></p>
+          <button class="Card-btn">Leer</button>
+        </div>
+      </div>
+      <div class="Card">
+        <img src="Images/opiece.jpg" alt="Onepiece" class="Card-img">
+        <div class="Card-body">
+          <h1 class="Card-title seccion-1">One Piece</h1>
+          <p class="Card-info seccion-1"></p>
+          <button class="Card-btn">Leer</button>
+        </div>
+      </div>
+      <div class="Card">
+        <img src="Images/tokiorevengers.jpe" alt="tokio revengers" class="Card-img">
+        <div class="Card-body">
+          <h1 class="Card-title seccion-1">tokio revengers</h1>
+          <p class="Card-info seccion-1"></p>
+          <button class="Card-btn">Leer</button>
+        </div>
+      </div>
+     </div>
+
+
 
 
   </div>
