[+] se agrego seccion los mejores shonen

--- a/index.html
+++ b/index.html
@@ -414,6 +414,61 @@
       </div>
      </div>
 
+     <a href="#"><img src="Images/hellsp.png" alt="Hell's paradise" class="img-largas"></a>
+
+     <h2 class="seccion-1">Los mejores shonen:  </h2>
+     <div class="gratis gap-3 ">
+          <div class="Card">
+          <img src="Images/baki.jpg" alt="Baki" class="Card-img">
+          <div class="Card-body">
+            <h1 class="Card-title seccion-1">Baki</h1>
+            <p class="Card-info seccion-1"></p>
+            <button class="Card-btn">Leer</button>
+          </div>
+        </div>
+      
+          <div class="Card">
+        <img src="Images/ragnarok.jpg" alt="Record of ragnarok" class="Card-img">
+        <div class="Card-body">
+          <h1 class="Card-title seccion-1">Record of ragnarok</h1>
+          <p class="Card-info seccion-1"></p>
+          <button class="Card-btn">Leer</button>
+        </div>
+      </div>
+
+      <div class="Card">
+        <img src="Images/mashl.jpg" alt="Mashle" class="Card-img">
+        <div class="Card-body">
+          <h1 class="Card-title seccion-1">Mashle</h1>
+          <p class="Card-info seccion-1"></p>
+          <button class="Card-btn">Leer</button>
+        </div>
+      </div>
+      <div class="Card">
+        <img src="Images/daidark.jpg" alt="daidark" class="Card-img">
+        <div class="Card-body">
+          <h1 class="Card-title seccion-1">dai dark</h1>
+          <p class="Card-info seccion-1"></p>
+          <button class="Card-btn">Leer</button>
+        </div>
+      </div>
+      <div class="Card">
+        <img src="Images/darkgatherin.jpg_large" alt="darkgatherin" class="Card-img">
+        <div class="Card-body">
+          <h1 class="Card-title seccion-1">dark gatherin</h1>
+          <p class="Card-info seccion-1"></p>
+          <button class="Card-btn">Leer</button>
+        </div>
+      </div>
+      <div class="Card">
+        <img src="Images/hajimete.jpe" alt="hajimete" class="Card-img">
+        <div class="Card-body">
+          <h1 class="Card-title seccion-1">hajimete</h1>
+          <p class="Card-info seccion-1"></p>
+          <button class="Card-btn">Leer</button>
+        </div>
+      </div>
+     </div>
 
 
 
