[+] se añadieron detalles

--- a/index.html
+++ b/index.html
@@ -758,8 +758,8 @@
           <div class="col">
             <ul class="menu-widget">
               <h5 class="title-widget">Cuenta</h5>
-              <li><a href="#" class="text-decoration-none">Crear cuenta</a></li>
-              <li><a href="#" class="text-decoration-none">Acceder</a></li>
+              <li><a href="Registration.html" class="text-decoration-none">Crear cuenta</a></li>
+              <li><a href="User.html" class="text-decoration-none">Acceder</a></li>
             </ul>
           </div>
         </div>
