[+] Se agrego pestaña Popular en seccion explorar

--- a/Registration.html
+++ b/Registration.html
@@ -59,7 +59,7 @@
                       Explorar
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Populares</a></li>
+                      <li><a class="dropdown-item" href="LoMasPopular.html">Populares</a></li>
                       <li>
                         <a class="dropdown-item" href="#"
                           >Calendario de lanzamientos</a
