--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                       Explorar
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Populares</a></li>
+                      <li><a class="dropdown-item" href="LoMasPopular.html">Populares</a></li>
                       <li>
                         <a class="dropdown-item" href="#"
                           >Calendario de lanzamientos</a
@@ -338,11 +338,11 @@
             <img src="Images/ichigo-01.png" alt="Ichigo" class="img-1" />
             <img src="Images/ichigo-02.png" alt="Ichigo" class="img-2" />
           </article>
-
           <article>
             <img src="Images/luffy-01.png" alt="Luffy" class="img-1" />
             <img src="Images/luffy-02.png" alt="Luffy" class="img-2" />
           </article>
+
         </div>
 
         <h2 class="seccion-1">Ultimos acualizados:</h2>
