[+] se agrego pestaña search

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
         <div class="iconos-menu d-flex justify-content-around gap-4">
           <div class="search">
-            <a class="icons-color" href="#"><i class="bi bi-search"></i></a>
+            <a class="icons-color" href="Search.html"><i class="bi bi-search"></i></a>
           </div>
           <div class="lista">
             <a class="icons-color" href="#"
