[+] se agregaron imagenes al acceso y registro y se cambio logo

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <a class="navbar-brand logo" href="#"
                 ><img
                   class="img-logo"
-                  src="Images/0b1f5e5169434d1cb4e37fbfeb23fd8f.png"
+                  src="Images/0b1f5e5169434d1cb4e37fbfeb23fd8f-PhotoRoom.png-PhotoRoom.png"
                   alt=""
               /></a>
               <button
