[+] se agrego pestaña de lista y historial

--- a/listaHistorial.html
+++ b/listaHistorial.html
@@ -140,133 +140,136 @@
 
     <main class="main">
       <div class="container">
-        <div class="search-field">
-          <input type="text" placeholder="Buscar..." class="search-input">
-         </div>
+        <div class="title-lista">
+          <h3>Mis listas</h3>
+        </div>
+        <div class="listah gap-5">
+          <a href="listaHistorial.html"><button type="button" class="btn btn-dark">Mi Lista</button></a>
+          <a href="Historial.html"><button type="button" class="btn btn-dark">Historial</button></a>
+        </div>
+        <div class="cgrande">
+          <img src="Images/rem5-PhotoRoom.png-PhotoRoom.png" alt="rem" class="rema">
+          <div class="text-lista">
+            <h4>Tu lista necesita algo de amor.</h4>
+            <h4>Llenala con tus mangas favoritos</h4>
+            <button type="button" class="btn btn-primary btnl">Volver al inicio</button>
+          </div>
+          
+        </div>
       </div>
 
     </main>
 
-    <hr class="hr">
+    <hr />
 
     <footer class="footer">
-      <div class="container">
-        <div class="termsuse gap-5">
-          <ul class="link-list">
-            <li class="t"> <a href="#" class="a">Terminos de uso </a></li>
-            <li class="t"> <a href="#" class="a">Politica de privacidad</a> </li>
-            <li class="t"> <a href="#" class="a">Consentimientos de cookies</a> </li>
-          </ul>
-          <hr class="hr">
-          <div class="row">
-            <div class="col">
-              <ul class="menu-social">
-                <h5>Contacta con nosotros</h5>
-                <li>
-                  <a href="#" class="text-decoration-none">
-                    <i class="bi bi-facebook"></i>
-                    <a href="#" class="text-decoration-none">Facebook</a>
-                  </a>
-                </li>
-                <li>
-                  <a href="#" class="text-decoration-none">
-                    <i class="bi bi-twitter"></i>
-                    <a href="#" class="text-decoration-none">Twitter</a>
-                  </a>
-                </li>
-                <li>
-                  <a href="#" class="text-decoration-none">
-                    <i class="bi bi-youtube"></i>
-                    <a href="#" class="text-decoration-none">Youtube</a>
-                  </a>
-                </li>
-                <li>
-                  <a href="#" class="text-decoration-none">
-                    <i class="bi bi-instagram"></i>
-                    <a href="#" class="text-decoration-none">Instagram</a>
-                  </a>
-                </li>
-                <li>
-                  <a href="#" class="text-decoration-none">
-                    <i class="bi bi-tiktok"></i>
-                    <a href="#" class="text-decoration-none">Tiktok</a>
-                  </a>
-                </li>
-              </ul>
-            </div>
-            <div class="col">
-              <ul class="menu-widget">
-                <h5 class="title-widget">Navegacion</h5>
-                <li>
-                  <a href="#" class="text-decoration-none"
-                    >Explorar lo mas popular</a
-                  >
-                </li>
-                <li>
-                  <a href="#" class="text-decoration-none">Explorar mangas</a>
-                </li>
-                <li>
-                  <a href="#" class="text-decoration-none"
-                    >Calendarios de lanzamientos</a
-                  >
-                </li>
-                <li><a href="#" class="text-decoration-none">Noticias</a></li>
-                <li><a href="#" class="text-decoration-none">Juegos</a></li>
-              </ul>
-            </div>
-            <div class="col">
-              <ul class="menu-widget">
-                <h5 class="title-widget">Club Manga</h5>
-                <li>
-                  <a href="#" class="text-decoration-none"
-                    >Comienza tu Puebra Gratuita</a
-                  >
-                </li>
-                <li><a href="#" class="text-decoration-none">Acerca</a></li>
-                <li>
-                  <a href="#" class="text-decoration-none">Terminos de uso</a>
-                </li>
-                <li>
-                  <a href="#" class="text-decoration-none"
-                    >Politica de Privacidad</a
-                  >
-                </li>
-                <li><a href="#" class="text-decoration-none">Contacto</a></li>
-                <li>
-                  <a href="#" class="text-decoration-none"
-                    >Hazte con nuestras aplicaciones</a
-                  >
-                </li>
-                <li>
-                  <a href="#" class="text-decoration-none"
-                    >Canjear tarjeta de regalo</a
-                  >
-                </li>
-              </ul>
-            </div>
-            <div class="col">
-              <ul class="menu-widget">
-                <h5 class="title-widget">Cuenta</h5>
-                <li><a href="#" class="text-decoration-none">Crear cuenta</a></li>
-                <li><a href="#" class="text-decoration-none">Acceder</a></li>
-              </ul>
-            </div>
+      <div class="container content-pre-footer">
+        <div class="row">
+          <div class="col">
+            <ul class="menu-social">
+              <h5>Contacta con nosotros</h5>
+              <li>
+                <a href="#" class="text-decoration-none">
+                  <i class="bi bi-facebook"></i>
+                  <a href="#" class="text-decoration-none">Facebook</a>
+                </a>
+              </li>
+              <li>
+                <a href="#" class="text-decoration-none">
+                  <i class="bi bi-twitter"></i>
+                  <a href="#" class="text-decoration-none">Twitter</a>
+                </a>
+              </li>
+              <li>
+                <a href="#" class="text-decoration-none">
+                  <i class="bi bi-youtube"></i>
+                  <a href="#" class="text-decoration-none">Youtube</a>
+                </a>
+              </li>
+              <li>
+                <a href="#" class="text-decoration-none">
+                  <i class="bi bi-instagram"></i>
+                  <a href="#" class="text-decoration-none">Instagram</a>
+                </a>
+              </li>
+              <li>
+                <a href="#" class="text-decoration-none">
+                  <i class="bi bi-tiktok"></i>
+                  <a href="#" class="text-decoration-none">Tiktok</a>
+                </a>
+              </li>
+            </ul>
           </div>
+          <div class="col">
+            <ul class="menu-widget">
+              <h5 class="title-widget">Navegacion</h5>
+              <li>
+                <a href="#" class="text-decoration-none"
+                  >Explorar lo mas popular</a
+                >
+              </li>
+              <li>
+                <a href="#" class="text-decoration-none">Explorar mangas</a>
+              </li>
+              <li>
+                <a href="#" class="text-decoration-none"
+                  >Calendarios de lanzamientos</a
+                >
+              </li>
+              <li><a href="#" class="text-decoration-none">Noticias</a></li>
+              <li><a href="#" class="text-decoration-none">Juegos</a></li>
+            </ul>
+          </div>
+          <div class="col">
+            <ul class="menu-widget">
+              <h5 class="title-widget">Club Manga</h5>
+              <li>
+                <a href="#" class="text-decoration-none"
+                  >Comienza tu Puebra Gratuita</a
+                >
+              </li>
+              <li><a href="#" class="text-decoration-none">Acerca</a></li>
+              <li>
+                <a href="#" class="text-decoration-none">Terminos de uso</a>
+              </li>
+              <li>
+                <a href="#" class="text-decoration-none"
+                  >Politica de Privacidad</a
+                >
+              </li>
+              <li><a href="#" class="text-decoration-none">Contacto</a></li>
+              <li>
+                <a href="#" class="text-decoration-none"
+                  >Hazte con nuestras aplicaciones</a
+                >
+              </li>
+              <li>
+                <a href="#" class="text-decoration-none"
+                  >Canjear tarjeta de regalo</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="col">
+            <ul class="menu-widget">
+              <h5 class="title-widget">Cuenta</h5>
+              <li><a href="Registration.html" class="text-decoration-none">Crear cuenta</a></li>
+              <li><a href="User.html" class="text-decoration-none">Acceder</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="container">
           <div class="copyright">
             <p>Copyright ©</p>
           </div>
         </div>
       </div>
-      </footer>
-     
-   
+    </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
       crossorigin="anonymous"
     ></script>
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   </body>
 </html>
