--- a/User.html
+++ b/User.html
@@ -30,7 +30,7 @@
                 ><img
                   class="img-logo"
                   src="Images/0b1f5e5169434d1cb4e37fbfeb23fd8f-PhotoRoom.png-PhotoRoom.png"
-                  alt=""
+                  alt="logo"
               /></a>
               <button
                 class="navbar-toggler"
@@ -125,7 +125,7 @@
             <a class="icons-color" href="Search.html"><i class="bi bi-search"></i></a>
           </div>
           <div class="lista">
-            <a class="icons-color" href="#"
+            <a class="icons-color" href="listaHistorial.html"
               ><i class="bi bi-bookmark-fill"></i
             ></a>
           </div>
