--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
         <div class="space">
           <nav class="navbar navbar-expand-lg bg-body-tertiary classpadding">
             <div class="container-fluid">
-              <a class="navbar-brand logo" href="#"
+              <a class="navbar-brand logo" href="index.html"
                 ><img
                   class="img-logo"
                   src="Images/0b1f5e5169434d1cb4e37fbfeb23fd8f-PhotoRoom.png-PhotoRoom.png"
-                  alt=""
+                  alt="logo"
               /></a>
               <button
                 class="navbar-toggler"
@@ -46,7 +46,7 @@
               <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link text-menu" href="#">Home</a>
+                    <a class="nav-link text-menu" href="index.html">Home</a>
                   </li>
                   <li class="nav-item dropdown">
                     <a
@@ -125,7 +125,7 @@
             <a class="icons-color" href="Search.html"><i class="bi bi-search"></i></a>
           </div>
           <div class="lista">
-            <a class="icons-color" href="#"
+            <a class="icons-color" href="listaHistorial.html"
               ><i class="bi bi-bookmark-fill"></i
             ></a>
           </div>
