[+] se añadieron mas detalles a pestañas lista y historial

--- a/listaHistorial.html
+++ b/listaHistorial.html
@@ -152,7 +152,7 @@
           <div class="text-lista">
             <h4>Tu lista necesita algo de amor.</h4>
             <h4>Llenala con tus mangas favoritos</h4>
-            <button type="button" class="btn btn-primary btnl">Volver al inicio</button>
+              <a href="index.html"><button type="button" class="btn btn-primary btnl">Volver al inicio</button></a>
           </div>
           
         </div>
