--- a/Historial.html
+++ b/Historial.html
@@ -152,7 +152,7 @@
           <div class="text-lista">
             <h4>Empieza a leer tus series favoritas</h4>
             <h4>para poder ver lo que haz leido aqui</h4>
-            <button type="button" class="btn btn-primary btnl">Volver al inicio</button>
+            <a href="index.html"><button type="button" class="btn btn-primary btnl">Volver al inicio</button></a>
           </div>
           
         </div>
