[+] S añadieron contenidos a una de las imagenes del slider y a una card

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
           </div>
           <div class="carousel-inner principal">
             <div class="carousel-item active">
-              <a href="#"
+              <a href="onepiece.html"
                 ><img
                   src="Images/onepiece.webp"
                   class="d-block w-100"
@@ -225,7 +225,7 @@
 
         <h2 class="seccion-1">Mangas Que Puedes Leer Gratis:</h2>
         <div class="gratis gap-3">
-          <div class="Card">
+      <div class="Card">
             <img
               src="Images/boku-no-hero-academy.download"
               alt="My hero Academia"
@@ -234,7 +234,7 @@
             <div class="Card-body">
               <h1 class="Card-title seccion-1">My Hero Academia</h1>
               <p class="Card-info seccion-1"></p>
-              <button class="Card-btn">Leer</button>
+              <a href="Myheroa.html"><button class="Card-btn">Leer</button></a>
             </div>
           </div>
 
