[+] se añadieron detalles de responsive a acceso y registro

--- a/Myheroa.html
+++ b/Myheroa.html
@@ -177,10 +177,12 @@
             <button type="button" class="btn btn-primary">Fantasia</button>
             <button type="button" class="btn btn-primary">Shonen</button>
           </div>
+          <div class="emleer">
           <img src="Images/m cap1.webp" alt="o1" class="caps">
-          <button type="button" class="btn btn-outline-danger">
+          <button type="button" class="btn btn-outline-danger empezarleer">
             <i class="bi bi-play"></i>Empezar a leer
           </button>
+        </div>
         </div>
   
       </div>
