--- a/onepiece.html
+++ b/onepiece.html
@@ -153,7 +153,7 @@
             class="imgone"
           />
         </div>
-        <div class="contotal">
+        <div class="contotal gap-5">
           <div class="contonepiece">
            <div class="title-one">
             <h2>One piece</h2>
@@ -184,11 +184,15 @@
             <button type="button" class="btn btn-primary">Fantasia</button>
             <button type="button" class="btn btn-primary">Shonen</button>
           </div>
-          <img src="Images/o cap1.webp" alt="o1" class="caps">
-          <button type="button" class="btn btn-outline-danger">
-            <i class="bi bi-play"></i>Empezar a leer
-          </button>
+          <div class="emleer">
+            <img src="Images/o cap1.webp" alt="o1" class="caps">
+            <button type="button" class="btn btn-outline-danger empezarleer">
+              <i class="bi bi-play"></i>Empezar a leer
+            </button>
+          </div>
+          
         </div>
+         
   
       </div>
     </main>
