[+] Se agrego responsive a varias pestañas

--- a/Myheroa.html
+++ b/Myheroa.html
@@ -153,7 +153,7 @@
             class="imgone"
           />
         </div>
-        <div class="contotal">
+        <div class="contotal1">
           <div class="contonepiece">
            <div class="title-one">
             <h2>My hero academia</h2>
@@ -178,8 +178,8 @@
             <button type="button" class="btn btn-primary">Shonen</button>
           </div>
           <div class="emleer">
-          <img src="Images/m cap1.webp" alt="o1" class="caps">
-          <button type="button" class="btn btn-outline-danger empezarleer">
+          <img src="Images/m cap1.webp" alt="o1" class="capsm">
+          <button type="button" class="btn btn-outline-danger empezarleer1">
             <i class="bi bi-play"></i>Empezar a leer
           </button>
         </div>
