[+] se agrego indentacion a todo el codigo

--- a/Historial.html
+++ b/Historial.html
@@ -59,7 +59,11 @@
                       Explorar
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="LoMasPopular.html">Populares</a></li>
+                      <li>
+                        <a class="dropdown-item" href="LoMasPopular.html"
+                          >Populares</a
+                        >
+                      </li>
                       <li>
                         <a class="dropdown-item" href="#"
                           >Calendario de lanzamientos</a
@@ -122,7 +126,9 @@
 
         <div class="iconos-menu d-flex justify-content-around gap-4">
           <div class="search">
-            <a class="icons-color" href="Search.html"><i class="bi bi-search"></i></a>
+            <a class="icons-color" href="Search.html"
+              ><i class="bi bi-search"></i
+            ></a>
           </div>
           <div class="lista">
             <a class="icons-color" href="listaHistorial.html"
@@ -144,20 +150,28 @@
           <h3>Mis listas</h3>
         </div>
         <div class="listah gap-5">
-          <a href="listaHistorial.html"><button type="button" class="btn btn-dark">Mi Lista</button></a>
-          <button type="button" class="btn btn-dark">Historial</button>  
+          <a href="listaHistorial.html"
+            ><button type="button" class="btn btn-dark">Mi Lista</button></a
+          >
+          <button type="button" class="btn btn-dark">Historial</button>
         </div>
         <div class="cgrande">
-          <img src="Images/abca302aec27974a2f540592d204649c-PhotoRoom.png-PhotoRoom.png" alt="rem" class="rema">
+          <img
+            src="Images/abca302aec27974a2f540592d204649c-PhotoRoom.png-PhotoRoom.png"
+            alt="rem"
+            class="rema"
+          />
           <div class="text-lista">
             <h4>Empieza a leer tus series favoritas</h4>
             <h4>para poder ver lo que haz leido aqui</h4>
-            <a href="index.html"><button type="button" class="btn btn-primary btnl">Volver al inicio</button></a>
+            <a href="index.html"
+              ><button type="button" class="btn btn-primary btnl">
+                Volver al inicio
+              </button></a
+            >
           </div>
-          
         </div>
       </div>
-
     </main>
 
     <hr />
@@ -253,8 +267,14 @@
           <div class="col">
             <ul class="menu-widget">
               <h5 class="title-widget">Cuenta</h5>
-              <li><a href="Registration.html" class="text-decoration-none">Crear cuenta</a></li>
-              <li><a href="User.html" class="text-decoration-none">Acceder</a></li>
+              <li>
+                <a href="Registration.html" class="text-decoration-none"
+                  >Crear cuenta</a
+                >
+              </li>
+              <li>
+                <a href="User.html" class="text-decoration-none">Acceder</a>
+              </li>
             </ul>
           </div>
         </div>
