--- a/Myheroa.html
+++ b/Myheroa.html
@@ -155,11 +155,11 @@
         </div>
         <div class="contotal1">
           <div class="contonepiece">
-           <div class="title-one">
-            <h2>My hero academia</h2>
-            <i class="bi bi-share-fill estrellas"  ></i>
-           </div>
-           
+            <div class="title-one">
+              <h2>My hero academia</h2>
+              <i class="bi bi-share-fill estrellas"></i>
+            </div>
+
             <div class="estrellas">
               <i class="bi bi-star"></i>
               <i class="bi bi-star"></i>
@@ -171,20 +171,27 @@
               <i class="bi bi-bookmark"></i> Añadir a mi lista
             </button>
             <p>
-              En un mundo en el que la mayor parte de la población nace con un Don, una habilidad extraordinaria diferente en cada cual, no tardaron en aparecer tanto villanos como héroes dispuestos a detenerlos. Con el tiempo los héroes pasaron a ser funcionarios del gobierno, estando regulados y viviendo de su trabajo, además de convertirse en objeto de admiración de muchos. Ahora, ser héroe es el sueño de la gran mayoría de niños, que esperan desde muy pequeños a que su Don se manifieste para comenzar a entrenar y soñar con convertirse en los héroes número uno.
+              En un mundo en el que la mayor parte de la población nace con un
+              Don, una habilidad extraordinaria diferente en cada cual, no
+              tardaron en aparecer tanto villanos como héroes dispuestos a
+              detenerlos. Con el tiempo los héroes pasaron a ser funcionarios
+              del gobierno, estando regulados y viviendo de su trabajo, además
+              de convertirse en objeto de admiración de muchos. Ahora, ser héroe
+              es el sueño de la gran mayoría de niños, que esperan desde muy
+              pequeños a que su Don se manifieste para comenzar a entrenar y
+              soñar con convertirse en los héroes número uno.
             </p>
             <button type="button" class="btn btn-primary">Accion</button>
             <button type="button" class="btn btn-primary">Fantasia</button>
             <button type="button" class="btn btn-primary">Shonen</button>
           </div>
           <div class="emleer">
-          <img src="Images/m cap1.webp" alt="o1" class="capsm">
-          <button type="button" class="btn btn-outline-danger empezarleer1">
-            <i class="bi bi-play"></i>Empezar a leer
-          </button>
+            <img src="Images/m cap1.webp" alt="o1" class="capsm" />
+            <button type="button" class="btn btn-outline-danger empezarleer1">
+              <i class="bi bi-play"></i>Empezar a leer
+            </button>
+          </div>
         </div>
-        </div>
-  
       </div>
     </main>
 
