--- a/index.html
+++ b/index.html
@@ -59,7 +59,11 @@
                       Explorar
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="LoMasPopular.html">Populares</a></li>
+                      <li>
+                        <a class="dropdown-item" href="LoMasPopular.html"
+                          >Populares</a
+                        >
+                      </li>
                       <li>
                         <a class="dropdown-item" href="#"
                           >Calendario de lanzamientos</a
@@ -122,7 +126,9 @@
 
         <div class="iconos-menu d-flex justify-content-around gap-4">
           <div class="search">
-            <a class="icons-color" href="Search.html"><i class="bi bi-search"></i></a>
+            <a class="icons-color" href="Search.html"
+              ><i class="bi bi-search"></i
+            ></a>
           </div>
           <div class="lista">
             <a class="icons-color" href="listaHistorial.html"
@@ -225,7 +231,7 @@
 
         <h2 class="seccion-1">Mangas Que Puedes Leer Gratis:</h2>
         <div class="gratis gap-3">
-      <div class="Card">
+          <div class="Card">
             <img
               src="Images/boku-no-hero-academy.download"
               alt="My hero Academia"
@@ -336,7 +342,6 @@
             <img src="Images/luffy-01.png" alt="Luffy" class="img-1" />
             <img src="Images/luffy-02.png" alt="Luffy" class="img-2" />
           </article>
-
         </div>
 
         <h2 class="seccion-1">Ultimos acualizados:</h2>
@@ -728,8 +733,14 @@
           <div class="col">
             <ul class="menu-widget">
               <h5 class="title-widget">Cuenta</h5>
-              <li><a href="Registration.html" class="text-decoration-none">Crear cuenta</a></li>
-              <li><a href="User.html" class="text-decoration-none">Acceder</a></li>
+              <li>
+                <a href="Registration.html" class="text-decoration-none"
+                  >Crear cuenta</a
+                >
+              </li>
+              <li>
+                <a href="User.html" class="text-decoration-none">Acceder</a>
+              </li>
             </ul>
           </div>
         </div>
