--- a/Search.html
+++ b/Search.html
@@ -59,7 +59,11 @@
                       Explorar
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="LoMasPopular.html">Populares</a></li>
+                      <li>
+                        <a class="dropdown-item" href="LoMasPopular.html"
+                          >Populares</a
+                        >
+                      </li>
                       <li>
                         <a class="dropdown-item" href="#"
                           >Calendario de lanzamientos</a
@@ -122,7 +126,9 @@
 
         <div class="iconos-menu d-flex justify-content-around gap-4">
           <div class="search">
-            <a class="icons-color" href="Search.html"><i class="bi bi-search"></i></a>
+            <a class="icons-color" href="Search.html"
+              ><i class="bi bi-search"></i
+            ></a>
           </div>
           <div class="lista">
             <a class="icons-color" href="listaHistorial.html"
@@ -141,23 +147,24 @@
     <main class="main">
       <div class="container">
         <div class="search-field">
-          <input type="text" placeholder="Buscar..." class="search-input">
-         </div>
+          <input type="text" placeholder="Buscar..." class="search-input" />
+        </div>
       </div>
-
     </main>
 
-    <hr class="hr">
+    <hr class="hr" />
 
     <footer class="footer">
       <div class="container">
         <div class="termsuse gap-5">
           <ul class="link-list">
-            <li class="t"> <a href="#" class="a">Terminos de uso </a></li>
-            <li class="t"> <a href="#" class="a">Politica de privacidad</a> </li>
-            <li class="t"> <a href="#" class="a">Consentimientos de cookies</a> </li>
+            <li class="t"><a href="#" class="a">Terminos de uso </a></li>
+            <li class="t"><a href="#" class="a">Politica de privacidad</a></li>
+            <li class="t">
+              <a href="#" class="a">Consentimientos de cookies</a>
+            </li>
           </ul>
-          <hr class="hr">
+          <hr class="hr" />
           <div class="row">
             <div class="col">
               <ul class="menu-social">
@@ -247,7 +254,9 @@
             <div class="col">
               <ul class="menu-widget">
                 <h5 class="title-widget">Cuenta</h5>
-                <li><a href="#" class="text-decoration-none">Crear cuenta</a></li>
+                <li>
+                  <a href="#" class="text-decoration-none">Crear cuenta</a>
+                </li>
                 <li><a href="#" class="text-decoration-none">Acceder</a></li>
               </ul>
             </div>
@@ -257,16 +266,20 @@
           </div>
         </div>
       </div>
-      </footer>
-     
-   
+    </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
       crossorigin="anonymous"
     ></script>
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
   </body>
 </html>
