--- a/onepiece.html
+++ b/onepiece.html
@@ -19,7 +19,7 @@
     <title>Club Manga</title>
   </head>
   <body>
-    <header class="header">
+    <header class="header fixed-top">
       <div
         class="container d-flex justify-content-between align-items-center space"
       >
