[+]se añadio hazte premium

--- a/index.html
+++ b/index.html
@@ -125,6 +125,10 @@
         </div>
 
         <div class="iconos-menu d-flex justify-content-around gap-4">
+          <div class="haztePremium gap-2">
+            <a href="#" class="telescopio"> <ion-icon name="diamond-outline"></ion-icon></a>
+            <a href="#" class="premium"> <h6>Hazte premium</h6></a>
+          </div>
           <div class="search">
             <a class="icons-color" href="Search.html"
               ><i class="bi bi-search"></i
@@ -757,5 +761,13 @@
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
       crossorigin="anonymous"
     ></script>
+    <script
+    type="module"
+    src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+  ></script>
+  <script
+    nomodule
+    src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+  ></script>
   </body>
 </html>
