--- a/todas-las-noticias.html
+++ b/todas-las-noticias.html
@@ -14,6 +14,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"
     />
+    <link rel="stylesheet" href="./css/SylesNoticias.css">
     <link rel="stylesheet" href="./styles.css" />
 
     <title>Club Manga</title>
