--- a/Myheroa.html
+++ b/Myheroa.html
@@ -179,7 +179,7 @@
               de convertirse en objeto de admiración de muchos. Ahora, ser héroe
               es el sueño de la gran mayoría de niños, que esperan desde muy
               pequeños a que su Don se manifieste para comenzar a entrenar y
-              soñar con convertirse en los héroes número uno.
+              soñar con convertirse en los heroes número uno.
             </p>
             <button type="button" class="btn btn-primary">Accion</button>
             <button type="button" class="btn btn-primary">Fantasia</button>
